# The-Forge-AL2O3-Simple

./: CMakeLists.txt  README.md  main.cpp
out_bin/srcshaders/Metal/: colour.frag.metal  passthrough.vert.metal
out_bin/srcshaders/Shaders/D3D12/: colour.frag  passthrough.vert
out_bin/srcshaders/Shaders/Metal/: passthrough.vert.metal
